--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,50 @@
 body{
-  font-family: sans-serif;
-  font-size:110%;
-  background-color: rgb(255, 115, 0);
+  display: flex;
+  flex-direction: column;
+  background-color: blueviolet;
 }
+
+#MainImage{
+  display: flex;
+  flex-direction: column  ;
+  
+}
+ nav .Navebar{
+background-color: aqua;
+
+
+}
+
+#MainImage img{
+  width: 250px ;
+  height: 250px;
+  border: 3px solid greenyellow;
+  border-radius: 50%;
+  align-self: center;
+}
+
+
 
 header {
-  text-align: center;
-  background-color: yellow;
+  display: flex;
+  flex-direction: column;
+  background-color:rgb(255, 153, 0);
+  color: blue;
+  padding: 20px;
+  background-image: url("/image/3311924db62ceef62a4a7ee87017280f.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
+main{
+  display: flex ;
+  
+}
+
+aside{
+  background-color: rgb(122, 122, 122);
+} 
 
 footer{
   background-color: #343330;
@@ -25,9 +61,71 @@ h2{color: rgb(251, 255, 0);
 }   
 
 img{
-width: 400px; ;
-height: 400px;
-border: 3px solid rgb(0, 255, 0);
-border-radius: 50%;
-margin-left: 700px;
+  width: 400px; ;
+  height: 400px;
+  border: 3px solid rgb(0, 255, 0);
+  border-radius: 50%;
+  margin-left: 700px;
+  }
+
+footer{
+  text-align: center;
+  background-color: rgb(255, 0, 21);
+  color: black;
+  
+}
+
+.wrapper .socialmedia {
+
+display: inline-block;
+width: 60px;
+height: 60px;
+margin: 0 10px;
+border-radius: 50px;
+overflow: hidden;
+transition: all 0.3s ease-out;
+
+}
+
+.wrapper .socialmedia:hover {
+
+width: 200px;
+background-color: aliceblue;
+
+}
+
+.wrapper .socialmedia span{
+
+font-size: 20px;
+height: 60px;
+transition: all 0.3s ease-out;
+font-weight: 500px;
+margin-left: 10px;
+
+}
+
+.wrapper .socialmedia .icon i{
+
+font-size: 30px;
+line-height: 60px;
+transition: all 0.3s ease-out;
+
+}
+
+.wrapper .socialmedia .icon {
+
+display: inline-block;
+height: 60px;
+width: 60px;
+line-height: 60px;
+border-radius: 50px;
+font-size: 30px;
+transition: all 0.3s ease-out;
+
+}
+
+::placeholder {
+
+color: red;
+
 }
